# cuPyLMA

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmarks/basic/: solve.py  solve.sh  torch_async_op.py  torch_async_op.sh
benchmarks/jacobian/: run_jacobian.py  run_jacobian.sh
benchmarks/preliminary/communication/: run_d2h.py  run_d2h.sh  run_h2d.py  run_h2d.sh
benchmarks/preliminary/matmul/: run_matmul.py  run_matmul.sh  run_matmul_100x.sh  run_matmul_10x.sh  run_matmul_20k.sh  run_matmul_40k.sh
benchmarks/preliminary/solve/: run_solve.py  run_solve.sh  run_solve_err.py  run_solve_err.sh
cuPyLMA/: __init__.py  config.py  lma.py
cuPyLMA/adapter/: parallel_pytorch_adapter.py
cupylma/: __init__.py  lma.py  sliced_tensor.py  util.py
examples/: curve_fitting.py  curve_fitting.sh  parallel_torch_curve.py  parallel_torch_curve.sh
examples/curve/: README.md  dense.py  gadi_v100.sh  train.py
examples/curve_fitting/: curve_fitting.sh
